--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   "devDependencies": {
     "eslint": "^6.5.1",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2"
+    "eslint-plugin-import": "^2.18.2",
+    "minimist": ">=0.2.1",
+    "acorn": ">=7.1.1"
   },
   "dependencies": {
     "axios": "^0.19.2"
